--- a/src/styles/theme/element.scss
+++ b/src/styles/theme/element.scss
@@ -24,7 +24,7 @@ $--colors: (
 @forward "element-plus/theme-chalk/src/common/var.scss" with
   (
     // do not use same name, it will override.
-    $colors: $--colors,
+    // $colors: $--colors,
     $button-padding-horizontal: ("default": 50px)
   );
 
